--- a/Dairy_Care_System/templates/addemployee.html
+++ b/Dairy_Care_System/templates/addemployee.html
@@ -15,7 +15,7 @@
 </head>
 <body><br><br><br>
     <div class="container">
-        <a href="{% url 'reguserlist' 'employee' %}" class="back-link">BACK</a>
+        <a href="{% url 'reguserlist' 'employee' %}" class="back-link">&larr; BACK</a>
         <div class="login-box">
             <h2>Add Employee</h2><br>
             <form id="employeeForm" method="post">
