--- a/Dairy_Care_System/templates/changepassword.html
+++ b/Dairy_Care_System/templates/changepassword.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="{% url 'userprofile' %}" class="back-link">BACK</a>
+        <a href="{% url 'userprofile' %}" class="back-link">&larr; BACK</a>
         <h2>Reset Password</h2><br>
         <p>Please enter your new password below.</p><br>
         <form id="resetPasswordForm" method="post">
