--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -24,7 +24,7 @@
             max-width: 1100px;
             margin: 100px auto;
             padding: 20px;
-            background-color: rgb(226, 233, 235);
+            background-color: rgb(240, 239, 228);
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
             display: flex;
@@ -41,7 +41,7 @@
             gap: 20px;
             width: 100%; /* Full width of the available space */
             height: 450px; /* Fixed height for the container */
-            background-color: rgb(221, 219, 219); /* White background */
+            background-color: rgb(236, 236, 236); /* White background */
             display: flex;
             justify-content: center; /* Center the image horizontally */
             align-items: center; /* Center the image vertically */
@@ -191,7 +191,7 @@
         .back-link {
             position: absolute;
             top: 20px;
-            right: 20px; /* Align to the left */
+            left: 20px; /* Align to the left */
             font-size: 30px;
             color: black;
             text-decoration: none;
@@ -213,7 +213,7 @@
 </head>
 <body>
 
-    <a href="{% url 'custproductslist' %}" class="back-link">&larr; Back</a>
+    <a href="{% url 'custproductslist' %}" class="back-link">&larr; BACK</a>
 
     <div class="container">
 
