--- a/Dairy_Care_System/dairy/static/css/addemployee.css
+++ b/Dairy_Care_System/dairy/static/css/addemployee.css
@@ -66,7 +66,7 @@ h2 {
 .back-link {
     position: absolute;
     top: 20px;
-    right: 20px;
+    left: 20px;
     font-size: 30px;
     color: black;
     text-decoration: none;
