--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -56,9 +56,9 @@ button[type="submit"]:hover {
 .back-link {
     position: absolute;
     top: 20px;
-    right: 20px;
+    left: 20px;
     font-size: 30px;
-    color: white;
+    color: black;
     text-decoration: none;
     font-family: 'Comic Sans MS', cursive;
 }
