--- a/Dairy_Care_System/dairy/static/css/registration.css
+++ b/Dairy_Care_System/dairy/static/css/registration.css
@@ -75,7 +75,7 @@ h2 {
     font-size: 16px;
 }
 
-.home-link {
+/* .home-link {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -85,6 +85,15 @@ h2 {
 .home-link img {
     width: 50px;
     height: 50px;
+} */
+
+/* Home Icon Style */
+.home-icon {
+    color: #000000; /* Color for the home icon */
+    margin-right: 20px; /* Space from the left edge */
+    margin-top: 10px; /* Space from the top of the header */
+    float: right; /* Aligns the icon to the left */
+    font-size: 45px; /* Increase the size of the icon (adjust as needed) */
 }
 
 .error-message {
