--- a/Dairy_Care_System/dairy/static/css/updateuserprofile.css
+++ b/Dairy_Care_System/dairy/static/css/updateuserprofile.css
@@ -56,7 +56,7 @@ input[type="text"], input[type="email"] {
 .back-link {
     position: absolute;
     top: 20px;
-    right: 20px;
+    left: 20px;
     font-size: 30px;
     color: black;
     text-decoration: none;
