--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -11,21 +11,24 @@
             margin: 0;
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
+
     </style>
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <!-- Add Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
     <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav">
-        <a href="#">Dairy Care System</a><br><br><br>
-        <a href="{% url 'reguserlist' 'all' %}">Users List</a><br>
-        <a href="{% url 'productslist' %}">Products List</a><br>
-        <a href="{% url 'animalslist' %}">Animals List</a><br>
-        <a href="#">Milk Details</a><br>
-        <a href="#">Equipment Details</a><br>
-        <a href="#">Feedback Review</a><br>
+        <a href="#">Dairy Care System</a><br><br>
+        <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Users List</a><br>
+        <a href="{% url 'productslist' %}"><i class="fas fa-tags"></i>  Products List</a><br>
+        <a href="{% url 'animalslist' %}"><i class="fas fa-paw"></i>  Animals List</a><br>
+        <a href="#"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
+        <a href="#"><i class="fas fa-tools"></i>  Equipment Details</a><br>
+        <a href="#"><i class="fas fa-comments"></i>  Feedback Review</a><br>
     </div>
 
     <!-- Navigation Bar -->
@@ -33,11 +36,10 @@
         <div class="header">
             <div class="nav-item">
                 <li>
-                    <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                    <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                     <div class="dropdown-content" id="dropdown-content">
-                        <a href="{% url 'userprofile' %}">Profile</a>
-                        <!-- Change Logout link to trigger a custom SweetAlert -->
-                        <a href="#" onclick="confirmLogout()">Logout</a>
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
             </div>
@@ -86,7 +88,7 @@
         function confirmLogout() {
             Swal.fire({
                 title: 'Are you sure?',
-                text: "You will be logged out of the system!",
+                text: "You will be logged out of Dairy Care System!",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
