--- a/Dairy_Care_System/templates/animalslist.html
+++ b/Dairy_Care_System/templates/animalslist.html
@@ -107,6 +107,7 @@
 
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 <body>
@@ -114,18 +115,18 @@
 <ul>
     <div class="header">
         <div class="nav-item">
-            <li><b><a href="{% url 'addanimal' %}">Add Animals</a></b></li>
+            <li><b><a href="{% url 'addanimal' %}"><i class="fa fa-paw"></i> Add Animals</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="#">All Animals List</a></b></li>
+            <li><b><a href="#"><i class="fas fa-tags"></i> All Animals List</a></b></li>
         </div>
         <div class="nav-item">
             <li>
-                <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'userprofile' %}">Profile</a>
+                    <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                     <!-- Change Logout link to trigger a custom SweetAlert -->
-                    <a href="#" onclick="confirmLogout()">Logout</a>
+                    <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </li>
         </div>
@@ -179,7 +180,7 @@
     function confirmLogout() {
         Swal.fire({
             title: 'Are you sure?',
-            text: "You will be logged out of the system!",
+            text: "You will be logged out of Dairy Care System!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
