--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -11,19 +11,26 @@
             margin: 0;
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
+
+        /* Add margin between icons and text */
+        .sidenav a i, .dropdown-content a i {
+            margin-right: 10px; /* Space between icon and text */
+        }
     </style>
+    <!-- Add Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
 
-    <!-- Side Navigation (Always Visible)-->
+    <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav">
-        <a href="#">Dairy Care System</a><br><br><br>
-        <a href="{% url 'custproductslist' %}">Products List</a><br>
-        <a href="{% url 'wishlist' %}">Your Wishlist</a><br>
-        <a href="#">Your Orders</a><br>
-        <a href="{% url 'feedbackpage' %}">Your Feedback</a><br>
+        <a href="#"></i> Dairy Care System</a><br><br><br>
+        <a href="{% url 'custproductslist' %}"><i class="fas fa-tags"></i> Products List</a><br>
+        <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
+        <a href="#"><i class="fas fa-shopping-cart"></i> Your Orders</a><br>
+        <a href="{% url 'feedbackpage' %}"><i class="fas fa-comment"></i> Your Feedback</a><br>
     </div>
 
     <!-- Navigation Bar -->
@@ -31,11 +38,15 @@
         <div class="header">
             <div class="nav-item">
                 <li>
-                    <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                    <b>
+                        <a href="#" class="username" onclick="toggleDropdown()">
+                            <i class="fas fa-user-circle"></i> {{ username }}
+                        </a>
+                    </b>
                     <div class="dropdown-content" id="dropdown-content">
-                        <a href="{% url 'userprofile' %}">Profile</a>
+                        <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                         <!-- Change Logout link to trigger a custom SweetAlert -->
-                        <a href="#" onclick="confirmLogout()">Logout</a>
+                        <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </li>
             </div>
@@ -43,21 +54,18 @@
     </ul>
 
     <center>
-    <!-- <h1><b>Customer Dashboard</b></h1> -->
-
         <!-- Message and Quote -->
-    <div class="message">
-        <h1>Welcome, {{ username }}!</h1> <br><br> 
-        We value your trust and aim to deliver the best shopping experience for you.
-    </div><br><br>
-    <div class="quote">
-        A satisfied customer is the best business strategy of all.
-    </div><br><br><br><br><br><br><br><br><br><br><br><br>
+        <div class="message">
+            <h1>Welcome, {{ username }}!</h1> <br><br>
+            We value your trust and aim to deliver the best shopping experience for you.
+        </div><br><br>
+        <div class="quote">
+            A satisfied customer is the best business strategy of all.
+        </div><br><br><br><br><br><br><br><br><br><br><br><br>
 
-    <footer>
-        <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
-    </footer>
-
+        <footer>
+            <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+        </footer>
     </center>
 
     <!-- Add SweetAlert2 JavaScript -->
@@ -88,7 +96,7 @@
         function confirmLogout() {
             Swal.fire({
                 title: 'Are you sure?',
-                text: "You will be logged out of the system!",
+                text: "You will be logged out of Dairy Care System!",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
