--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -12,7 +12,8 @@
         }
     </style>
 
-    <!-- Add SweetAlert2 CSS -->
+    <!-- Add Font Awesome and SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 </head>
 <body>
@@ -20,24 +21,23 @@
 <ul>
     <div class="header">
         <div class="nav-item">
-            <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
+            <li><b><a href="{% url 'custproductslist' %}"><i class="fas fa-tags"></i> Products List</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'wishlist' %}">Your Wishlist</a></b></li>
+            <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="#">Your Orders</a></b></li>
+            <li><b><a href="#"><i class="fas fa-shopping-cart"></i> Your Orders</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'feedbackpage' %}">Your Feedback</a></b></li>
+            <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a></b></li>
         </div>
         <div class="nav-item">
             <li>
-                <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'userprofile' %}">Profile</a>
-                    <!-- Change Logout link to trigger a custom SweetAlert -->
-                    <a href="#" onclick="confirmLogout()">Logout</a>
+                    <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                    <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </li>
         </div>
@@ -67,8 +67,9 @@
     {% endfor %}
 </div>
 
-<!-- Add SweetAlert2 JavaScript -->
+<!-- Add SweetAlert2 and Font Awesome JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
 <script>
     // Toggle dropdown on click
@@ -95,7 +96,7 @@
     function confirmLogout() {
         Swal.fire({
             title: 'Are you sure?',
-            text: "You will be logged out of the system!",
+            text: "You will be logged out of Dairy Care System!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
