--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
     <style>
         body {
-            background: url('{% static "images/emppg.png" %}') no-repeat center center fixed;
+            background: url('{% static "images/nnnn.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
@@ -14,16 +14,18 @@
     </style>
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
     
     <!-- Side Navigation -->
     <div id="mySidenav" class="sidenav">
         <a href="#">Dairy Care System</a><br><br><br>
-        <a href="{% url 'productslist' %}">Products List</a><br>
-        <a href="{% url 'animalslist' %}">Animals List</a><br>
-        <a href="#">Milk Details</a><br>
-        <a href="#">Equipment Details</a>
+        <a href="{% url 'productslist' %}"><i class="fas fa-tags"></i> Products List</a><br>
+        <a href="{% url 'animalslist' %}"><i class="fa fa-paw"></i> Animals List</a><br>
+        <a href="#"><i class="fas fa-glass-whiskey"></i> Milk Details</a><br>
+        <a href="#"><i class="fa fa-tools"></i> Equipment Details</a>
     </div>
 
 <!-- Navigation Bar -->
@@ -31,11 +33,11 @@
     <div class="header">
         <div class="nav-item">
             <li>
-                <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'userprofile' %}">Profile</a>
+                    <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                     <!-- Change Logout link to trigger a custom SweetAlert -->
-                    <a href="#" onclick="confirmLogout()">Logout</a>
+                    <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </li>
         </div>
@@ -88,7 +90,7 @@
     function confirmLogout() {
         Swal.fire({
             title: 'Are you sure?',
-            text: "You will be logged out of the system!",
+            text: "You will be logged out of Dairy Care System!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
