--- a/Dairy_Care_System/templates/home.html
+++ b/Dairy_Care_System/templates/home.html
@@ -4,6 +4,7 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
             background: url('{% static "images/home.png" %}') no-repeat center center fixed;
@@ -13,24 +14,29 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'home' %}" class="home-link">
+    <!-- <a href="{% url 'home' %}" class="home-link">
         <img src="{% static 'images/homeblack.jpg' %}" alt="Home">
-    </a>
+    </a> -->
+    
 
 <!-- Navigation Bar -->
 <ul>
+    <a href="{% url 'home' %}">
+        <i class="fas fa-home home-icon"></i>
+    </a>
+    
     <div class="header">
         <div class="nav-item">
-            <li><b><a href="{% url 'about' %}">About</a></b></li>
+            <li><b><a href="{% url 'about' %}"><i class="fas fa-info-circle"></i> About</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'registration' %}">Register</a></b></li>
+            <li><b><a href="{% url 'registration' %}"><i class="fas fa-user-plus"></i> Register</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'login' %}">Login</a></b></li>
+            <li><b><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'contactus' %}">Contact Us</a></b></li>
+            <li><b><a href="{% url 'contactus' %}"><i class="fas fa-envelope"></i> Contact Us</a></b></li>
         </div>
     </div>
 </ul>
@@ -46,3 +52,43 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- <ul>
+    <li>
+        <a href="{% url 'home' %}" class="nav-item">
+            <i class="fas fa-home home-icon"></i>
+            <span class="nav-text">Home</span>
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'about' %}" class="nav-item">
+            <i class="fas fa-info-circle"></i>
+            <span class="nav-text">About</span>
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'registration' %}" class="nav-item">
+            <i class="fas fa-user-plus"></i>
+            <span class="nav-text">Register</span>
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'login' %}" class="nav-item">
+            <i class="fas fa-sign-in-alt"></i>
+            <span class="nav-text">Login</span>
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'contactus' %}" class="nav-item">
+            <i class="fas fa-envelope"></i>
+            <span class="nav-text">Contact Us</span>
+        </a>
+    </li>
+</ul> -->
