--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
     <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CDN -->
     <style>
         body {
             background: url('{% static "images/signin.jpg" %}') no-repeat center center fixed;
@@ -15,9 +16,14 @@
     </style>
 </head>
 <body>
-    <a href="{% url 'home' %}" class="home-link">
+    <!-- <a href="{% url 'home' %}" class="home-link">
         <img src="{% static 'images/homeblue.jpg' %}" alt="Home">
+    </a> -->
+    
+    <a href="{% url 'home' %}">
+        <i class="fas fa-home home-icon"></i>
     </a>
+    
     <div class="container">
         <div class="login-box">
             <h2><b>Register</b></h2>
