--- a/Dairy_Care_System/templates/reguserlist.html
+++ b/Dairy_Care_System/templates/reguserlist.html
@@ -13,31 +13,31 @@
     </style>
     <!-- Add SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <!-- Add Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
 <ul>
     <div class="header">
         <div class="nav-item">
-            <li><b><a href="{% url 'addemployee' %}">Add Employee</a></b></li>
+            <li><b><a href="{% url 'addemployee' %}"><i class="fas fa-user-plus"></i> Add Employee</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'reguserlist' 'all' %}">Users list</a></b></li>
+            <li><b><a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i> Users List</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'reguserlist' 'employee' %}">Employee list</a></b></li>
+            <li><b><a href="{% url 'reguserlist' 'employee' %}"><i class="fas fa-user-tie"></i> Employee List</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'reguserlist' 'customer' %}">Customer list</a></b></li>
+            <li><b><a href="{% url 'reguserlist' 'customer' %}"><i class="fas fa-user-friends"></i> Customer List</a></b></li>
         </div>
         <div class="nav-item">
             <li>
-                <b><a href="#" class="username" onclick="toggleDropdown()">{{ username }}</a></b>
+                <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'userprofile' %}">Profile</a>
-                    <a href="{% url 'adminpage' %}">Dashboard</a>
-                    <!-- Change Logout link to trigger a custom SweetAlert -->
-                    <a href="#" onclick="confirmLogout()">Logout</a>
+                    <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
+                    <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </li>
         </div>
@@ -74,10 +74,10 @@
                             <div class="button-group">
                                 <!-- Show delete button only if user is active -->
                                 {% if user.status %}
-                                    <a href="#" class="delete-btn" onclick="openModal('delete', '{{ user.username }}', '{% url 'regdeleteuser' user.user_id %}');"><b>Delete</b></a>
+                                    <a href="#" class="delete-btn" onclick="openModal('delete', '{{ user.username }}', '{% url 'regdeleteuser' user.user_id %}');"><i class="fas fa-trash"></i> <b>Delete</b></a>
                                 {% else %}
                                     <!-- Show restore button only if user is inactive -->
-                                    <a href="#" class="view-btn" onclick="openModal('restore', '{{ user.username }}', '{% url 'restoreuser' user.user_id %}');"><b>Restore</b></a>
+                                    <a href="#" class="view-btn" onclick="openModal('restore', '{{ user.username }}', '{% url 'restoreuser' user.user_id %}');"><i class="fas fa-undo"></i> <b>Restore</b></a>
                                 {% endif %}
                             </div>
                         </td>                        
@@ -163,7 +163,7 @@
     function confirmLogout() {
         Swal.fire({
             title: 'Are you sure?',
-            text: "You will be logged out of the system!",
+            text: "You will be logged out of Dairy Care System!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
