--- a/Dairy_Care_System/templates/updateuserprofile.html
+++ b/Dairy_Care_System/templates/updateuserprofile.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <a href="{% url 'userprofile' %}" class="back-link">BACK</a>
+    <a href="{% url 'userprofile' %}" class="back-link">&larr; BACK</a>
 
     <div class="container">
         <h1>Update Profile</h1><br>
