commit 30 (otp registration)

--- a/Dairy_Care_System/templates/about.html
+++ b/Dairy_Care_System/templates/about.html
@@ -31,7 +31,7 @@
             <li><b><a href="{% url 'about' %}"><i class="fas fa-info-circle"></i> About</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'registration' %}"><i class="fas fa-user-plus"></i> Register</a></b></li>
+            <li><b><a href="{% url 'regmailverify' %}"><i class="fas fa-user-plus"></i> Register</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></b></li>
