--- a/Dairy_Care_System/templates/addproducts.html
+++ b/Dairy_Care_System/templates/addproducts.html
@@ -36,7 +36,7 @@
     <textarea id="productDescription" name="product_description" rows="4"></textarea>
     <div id="descriptionError" class="error-message"></div>
 
-    <label for="productQuantity">Quantity:</label>
+    <label for="productQuantity">Stock:</label>
     <div class="quantity-container">
         <input type="text" id="productQuantity" name="product_quantity" class="quantity-input">
         <select id="quantityUnit" name="quantity_unit" class="unit-select">
