--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -29,7 +29,7 @@
         <a href="#"></i> Dairy Care System</a><br><br><br>
         <a href="{% url 'custproductslist' %}"><i class="fas fa-tags"></i> Products List</a><br>
         <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
-        <a href="#"><i class="fas fa-shopping-cart"></i> Your Orders</a><br>
+        <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
         <a href="{% url 'feedbackpage' %}"><i class="fas fa-comment"></i> Your Feedback</a><br>
     </div>
 
