--- a/Dairy_Care_System/templates/login.html
+++ b/Dairy_Care_System/templates/login.html
@@ -50,7 +50,7 @@
                 {% endif %}
 
                 <p class="forgot-password"><a href="forgotpassword">Forgot Password ?</a></p>
-                <p class="no-account">Don't have an account ? <a href="registration">Register</a></p><br>
+                <p class="no-account">Don't have an account ? <a href="regmailverify">Register</a></p><br>
                 <hr>
                 <div class="google-signin">
                     <img src='{% static "images/google.png" %}' alt="Google Logo">
