--- a/Dairy_Care_System/templates/updateproduct.html
+++ b/Dairy_Care_System/templates/updateproduct.html
@@ -31,7 +31,7 @@
             <textarea id="product_description" name="product_description" required>{{ product.product_description }}</textarea>
             <span class="error" id="productDescriptionError"></span>
 
-            <label for="quantity">Quantity:</label>
+            <label for="quantity">Stock:</label>
             <input type="text" id="quantity" name="product_quantity" value="{{ product.product_quantity }}" required>
             <span class="error" id="quantityError"></span>
 
