--- a/Dairy_Care_System/templates/registration.html
+++ b/Dairy_Care_System/templates/registration.html
@@ -29,16 +29,24 @@
             <h2><b>Register</b></h2>
             <form id="registrationForm" method="POST">
                 {% csrf_token %}
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Enter your email" value="{{ verified_email }}" required>
+                    <div class="error-message" id="emailError"></div>
+                </div>
+
                 <div class="form-group">
                     <label for="username">Name</label>
                     <input type="text" id="username" name="username" placeholder="Enter your name">
                     <div class="error-message" id="usernameError"></div>
                 </div>
-                <div class="form-group">
+                
+                <!-- <div class="form-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Enter your email">
                     <div class="error-message" id="emailError"></div>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
                     <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
@@ -144,8 +152,8 @@
             }
     
             // Apply validation for each field
-            validateFieldsBefore(email, username, 'emailError');
-            validateFieldsBefore(phone, email, 'phoneError');
+            validateFieldsBefore(username, email, 'emailError');
+            validateFieldsBefore(phone, username, 'phoneError');
             validateFieldsBefore(password, phone, 'passwordError');
 
             // Event listener for form submission
