--- a/Dairy_Care_System/templates/wishlist.html
+++ b/Dairy_Care_System/templates/wishlist.html
@@ -183,7 +183,7 @@
                 <li><b><a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a></b></li>
             </div>  
             <div class="nav-item">
-                <li><b><a href="#"><i class="fas fa-shopping-cart"></i> Your Orders</a></b></li>
+                <li><b><a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a></b></li>
             </div>
             <div class="nav-item">
                 <li><b><a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a></b></li>
@@ -193,6 +193,7 @@
                     <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                     <div class="dropdown-content" id="dropdown-content">
                         <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i>Profile</a>
+                        <a href="{% url 'customerpage' %}"><i class="fas fa-home"></i> Dashboard</a>
                         <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i>Logout</a>
                     </div>
                 </li>
@@ -221,7 +222,7 @@
                 </div>
                 <form method="POST" action="{% url 'wishlist' %}">
                     {% csrf_token %}
-                    <input type="hidden" name="remove_product_id" value="{{ item.product.id }}">
+                    <input type="hidden" name="remove_product_id" value="{{ item.product.product_id }}">
                     <button type="submit" class="remove-button">Remove</button>
                 </form>
             </div>
