--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -29,7 +29,7 @@
         <a href="{% url 'animalslist' %}"><i class="fas fa-paw"></i>  Animals List</a><br>
         <a href="#"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
         <a href="#"><i class="fas fa-tools"></i>  Equipment Details</a><br>
-        <a href="#"><i class="fas fa-comments"></i>  Feedback Review</a><br>
+        <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
     </div>
 
     <!-- Navigation Bar -->
